# BMS

./: .gitignore  CONFIG.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_STATUS.md  README.md  demo.sh
.github/: copilot-instructions.md
crates/bms-api/: Cargo.toml
crates/bms-api/src/: handlers.rs  main.rs  state.rs
crates/bms-cli/: Cargo.toml
crates/bms-cli/src/: main.rs
crates/bms-core/: Cargo.toml
crates/bms-core/src/: canonical.rs  coordinate.rs  delta.rs  error.rs  lib.rs  merkle.rs  snapshot.rs  types.rs
crates/bms-storage/: Cargo.toml
crates/bms-storage/src/: lib.rs  models.rs  repository.rs  schema.rs
crates/bms-vector/: Cargo.toml
crates/bms-vector/src/: embedding.rs  lib.rs  memory_store.rs  types.rs
docs/: BMS_DESIGN.txt  MISTRAL_ANALYSIS.md  VECTOR_SEARCH_DESIGN.md
