[workspace]
members = [
    "crates/bms-core",
    "crates/bms-storage",
    "crates/bms-vector",
    "crates/bms-api",
    "crates/bms-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Whisper Engine AI"]
license = "MIT"
repository = "https://github.com/whisperengine-ai/BMS"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
async-trait = "0.1"

# Cryptography
sha3 = "0.10"
base32 = "0.5"
ed25519-dalek = "2.1"

# JSON manipulation
json-patch = "2.0"
jsonptr = "0.4"

# Storage
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json", "chrono"] }

# Vector search and embeddings
qdrant-client = { version = "1.11", features = ["serde"] }
fastembed = "5.2"

# HTTP/API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Testing
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
