[package]
name = "bms-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "bms"
path = "src/main.rs"

[dependencies]
bms-core = { path = "../bms-core", features = ["sqlx-support"] }
bms-storage = { path = "../bms-storage" }
bms-vector = { path = "../bms-vector" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
